--- a/clipboard.html
+++ b/clipboard.html
@@ -19,61 +19,61 @@
     <div class="flex justify-center">
         <div class="flex flex-col mt-40 space-y-10">
             <div class="flex justify-center">
-                <img src="./images/logo.svg" class="w-40 xsm:hidden" alt="">
+                <img src="./images/logo.svg" class="w-40 sm:pl-80" alt="">
             </div>         
             <h1 class="font-sans font-normal text-5xl text-gray-700 tracking-wider text-center">
                 A history of everything you copy
             </h1>
-            <p class="text-gray-400 font-normal lg:text-xl text-center sm:text-3xl">
+            <p class="text-gray-400 font-normal xl:w-full xl:text-xl xl:text-center md:text-3xl md:w-4/4 md:text-center sm:text-center">
                 Clipboard allows you to track and organize everything you 
                 copy. Instantly <br> access your clipboard on all your devices.
             </p>
             <div class="flex flex-row justify-center align-center space-x-10 pt-10 flex-wrap">
-                <button class="lg:flex lg:items-center bg-teal-500 text-white rounded-full lg:w-60 lg:h-10 lg:text-lg lg:px-10 sm:p-6 sm:w-60 sm:text-2xl">Download for iOS</button>
-                <button class="lg:flex lg:items-center bg-indigo-500 text-white rounded-full lg:w-60 lg:h-10 lg:text-lg lg:px-10 sm:p-6 sm:w-60 sm:text-2xl">Download for Mac</button>
+                <button class="lg:flex lg:items-center bg-teal-500 text-white rounded-full xl:w-60 xl:h-10 xl:text-lg xl:px-10 md:p-6 md:w-60 md:text-2xl">Download for iOS</button>
+                <button class="lg:flex lg:items-center bg-indigo-500 text-white rounded-full xl:w-60 xl:h-10 xl:text-lg xl:px-10 md:p-6 md:w-60 md:text-2xl">Download for Mac</button>
             </div>
         </div>
     </div>
     <div class="flex flex-col justify-center space-y-10 mt-40">
-        <h1 class="font-sans font-normal lg:text-4xl text-gray-700 tracking-wider text-center sm:text-5xl">
+        <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
             Keep track of your snippets
         </h1>
-        <p class="text-gray-400 font-normal lg:text-lg text-center sm:text-2xl">
+        <p class="text-gray-400 font-normal xl:text-lg text-center md:text-2xl">
             Clipboard instantly stores any item you copy in the cloud, 
             meaning you can access <br> your snippets immediately on all your 
             devices. Our Mac and iOS apps will help you <br> organize everything.
         </p>
     </div>
     <div class="flex justify-between mt-20 flex-wrap">
-        <div class="lg:ml-0  sm:m-auto">
+        <div class="xl:ml-0  md:m-auto">
             <img src="./images/image-computer.png" alt="">
         </div>
-        <div class="flex flex-col lg:pt-20 sm:m-auto sm:space-y-20 sm:pt-40  lg:space-y-6 lg:pr-40">
-            <h3 class="font-serif font-light lg:text-left lg:text-2xl text-gray-700 tracking-wider sm:text-center sm:text-4xl">
+        <div class="flex flex-col xl:pt-20 md:m-auto md:space-y-20 md:pt-40  xl:space-y-6 xl:pr-40">
+            <h3 class="font-serif font-light xl:text-left xl:text-2xl text-gray-700 tracking-wider md:text-center md:text-4xl">
                 Quick Search
             </h3>
-            <p class="text-gray-400 font-light lg:text-left lg:text-lg pb-10 sm:text-center sm:text-3xl">
+            <p class="text-gray-400 font-light xl:text-left xl:text-lg pb-10 md:text-center md:text-3xl">
                 Easily search your snippets by content, <br> category, web address, application, and more.
             </p>
-            <h3 class="font-serif font-light lg:text-left lg:text-2xl text-gray-700 tracking-wider sm:text-center sm:text-4xl">
+            <h3 class="font-serif font-light xl:text-left xl:text-2xl text-gray-700 tracking-wider md:text-center md:text-4xl">
                 iCloud Sync
             </h3>
-            <p class="text-gray-400 font-light lg:text-left lg:text-lg pb-10 sm:text-center sm:text-3xl">
+            <p class="text-gray-400 font-light xl:text-left xl:text-lg pb-10 md:text-center md:text-3xl">
                 Instantly saves and syncs snippets across all <br> your devices.
             </p>
-            <h3 class="font-serif font-light lg:text-left lg:text-2xl text-gray-700 tracking-wider sm:text-center sm:text-4xl">
+            <h3 class="font-serif font-light xl:text-left xl:text-2xl text-gray-700 tracking-wider md:text-center md:text-4xl">
                 Complete History
             </h3>
-            <p class="text-gray-400 font-light lg:text-left lg:text-lg sm:text-center sm:text-3xl">
+            <p class="text-gray-400 font-light xl:text-left xl:text-lg md:text-center md:text-3xl">
                 Retrieve any snippets from the first moment <br> you started using the app.
             </p>
         </div>
     </div>
     <div class="flex flex-col justify-center space-y-10 mt-40">
-        <h1 class="font-sans font-normal lg:text-4xl text-gray-700 tracking-wider text-center sm:text-5xl">
+        <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
             Access Clipboard anywhere
         </h1>
-        <p class="text-gray-400 font-normal lg:text-xl text-center sm:text-2xl">
+        <p class="text-gray-400 font-normal xl:text-xl text-center md:text-2xl">
             Whether you’re on the go, or at your computer, you can access all your Clipboard <br>
             snippets in a few simple clicks.
         </p>
@@ -82,51 +82,51 @@
         <img src="./images/image-devices.png" class="pt-20"  alt="">
     </div>
     <div class="flex flex-col justify-center space-y-10 mt-20">
-        <h1 class="font-sans font-normal lg:text-4xl text-gray-700 tracking-wider text-center sm:text-5xl">
+        <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
             Supercharge your workflow
         </h1>
-        <p class="text-gray-400 font-normal lg:text-xl text-center sm:text-3xl">
+        <p class="text-gray-400 font-normal xl:text-xl text-center md:text-3xl">
             We’ve got the tools to boost your productivity.
         </p>
     </div>
-    <div class="lg:flex lg:justify-around flex-wrap lg:mt-20 pb-20  sm:mt-40">
-       <div class="lg:flex lg:items-center lg:space-y-20 sm:space-y-40">
-            <div class="flex flex-col lg:pr-20 lg:pt-14 space-y-10">
+    <div class="xl:flex xl:justify-around flex-wrap xl:mt-20 pb-20  md:mt-40">
+       <div class="xl:flex xl:items-center xl:space-y-20 md:space-y-40">
+            <div class="flex flex-col xl:pr-20 xl:pt-14 space-y-10">
                 <div class="flex justify-center">
                     <img src="./images/icon-blacklist.svg" class="w-20" alt="">
                 </div>
-                <h1 class="font-sans font-normal lg:text-4xl text-gray-700 tracking-wider text-center sm:text-5xl">
+                <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
                     Create blacklists
                 </h1>
-                <p class="text-gray-400 font-normal lg:text-xl leading-10 text-center sm:text-3xl">
+                <p class="text-gray-400 font-normal xl:text-xl leading-10 text-center md:text-3xl">
                     Ensure sensitive information never makes its <br> way to your clipboard by excluding certain.
                 </p>
             </div>
-            <div class="flex flex-col space-y-10 lg:pr-20 lg:pb-3">
+            <div class="flex flex-col space-y-10 xl:pr-20 xl:pb-3">
                 <div class="flex justify-center">
                     <img src="./images/icon-text.svg" class="w-20" alt="">
                 </div>
-                <h1 class="font-sans font-normal lg:text-4xl text-gray-700 tracking-wider text-center sm:text-5xl">
+                <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
                     Plain text snippets
                 </h1>
-                <p class="text-gray-400 font-normal lg:text-xl leading-10 text-center sm:text-3xl">
+                <p class="text-gray-400 font-normal xl:text-xl leading-10 text-center md:text-3xl">
                     Remove unwanted formatting from copied text <br> for a consistent look.
                 </p>
             </div>
-            <div class="flex flex-col space-y-10 lg:pt-3">
+            <div class="flex flex-col space-y-10 xl:pt-3">
                 <div class="flex justify-center">
                     <img src="./images/icon-preview.svg" class="w-20" alt="">
                 </div>
-                <h1 class="font-sans font-normal lg:text-4xl text-gray-700 tracking-wider text-center sm:text-5xl">
+                <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
                     Sneak preview
                 </h1>
-                <p class="text-gray-400 font-normal lg:text-xl leading-10 text-center sm:text-3xl">
+                <p class="text-gray-400 font-normal xl:text-xl leading-10 text-center md:text-3xl">
                     Quick preview of all snippets on your Clipboard <br> for easy access.
                 </p>
             </div>
        </div>
     </div>
-    <div class="flex flex-wrap justify-center lg:m-auto lg:mt-40 sm:space-y-10 sm:ml-20">
+    <div class="flex flex-wrap justify-center xl:m-auto xl:mt-40 md:space-y-10 md:ml-20">
         <img src="./images/logo-google.png" class="w-40 mr-28" alt="">
         <img src="./images/logo-ibm.png" class="w-40 mr-28" alt="">
         <img src="./images/logo-microsoft.png" class="w-40 mr-28" alt="">
@@ -135,29 +135,29 @@
     </div>
     <div class="flex justify-center mt-20">
         <div class="flex flex-col mt-40 space-y-10">       
-            <h1 class="font-sans font-normal lg:text-4xl sm:text-5xl text-gray-700 tracking-wider text-center">
+            <h1 class="font-sans font-normal xl:text-4xl md:text-5xl text-gray-700 tracking-wider text-center">
                 Clipboard for iOS and Mac Os            
             </h1>
-            <p class="text-gray-400 font-normal lg:text-xl text-center sm:text-3xl">
+            <p class="text-gray-400 font-normal xl:text-xl text-center md:text-3xl">
                 Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
                 and <br> you’re ready to start adding to your clipboard.              
             </p>
             <div class="flex flex-row justify-center align-center space-x-10 pt-10 flex-wrap">
-                <button class="lg:flex lg:items-center bg-teal-500 text-white rounded-full lg:w-60 lg:h-10 lg:text-lg lg:px-10 sm:p-6 sm:w-60 sm:text-2xl">Download for iOS</button>
-                <button class="lg:flex lg:items-center bg-indigo-500 text-white rounded-full  lg:w-60 lg:h-10 lg:text-lg lg:px-10 sm:p-6 sm:w-60 sm:text-2xl">Download for Mac</button>
+                <button class="lg:flex lg:items-center bg-teal-500 text-white rounded-full xl:w-60 xl:h-10 xl:text-lg xl:px-10 md:p-6 md:w-60 md:text-2xl">Download for iOS</button>
+                <button class="lg:flex lg:items-center bg-indigo-500 text-white rounded-full  xl:w-60 xl:h-10 xl:text-lg xl:px-10 md:p-6 md:w-60 md:text-2xl">Download for Mac</button>
             </div>
         </div>
     </div>
     <footer class="flex flex-wrap items-center bg-gray-200 h-40 mt-40">
        <div class="flex justify-around">
-            <div class="flex items-start pl-10 lg:pr-40 sm:pr-10">
+            <div class="flex items-start pl-10 xl:pr-40 md:pr-10">
                 <img src="./images/logo.svg" class="w-20" alt="">
             </div>  
-            <div class="flex flex-col space-y-6 text-gray-600 lg:pr-60 sm:pr-20">
+            <div class="flex flex-col space-y-6 text-gray-600 xl:pr-60 md:pr-20">
                 <a href="">FAQs</a>
                 <a href="">Contact Us</a>
             </div>
-            <div class="flex flex-col space-y-6 text-gray-600 lg:pr-60 sm:pr-20">
+            <div class="flex flex-col space-y-6 text-gray-600 xl:pr-60 md:pr-20">
                 <a href="">Privacy Policy</a>
                 <a href=""> Press Kit</a>
             </div>
@@ -165,7 +165,7 @@
                 <a href="">Install Guide</a>
             </div>
        </div>
-       <div class="flex space-x-6 lg:pl-80 sm:pl-0 sm:pt-20">
+       <div class="flex space-x-6 xl:pl-80 md:pl-0 md:pt-20">
             <img src="./images/icon-facebook.svg" alt="">
             <img src="./images/icon-twitter.svg" alt="">
             <img src="./images/icon-instagram.svg" alt="">
