--- a/clipboard.html
+++ b/clipboard.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="output.css" rel="stylesheet">
   <title>clipboard</title>
 </head>
     <style>
@@ -19,61 +21,63 @@
     <div class="flex justify-center">
         <div class="flex flex-col mt-40 space-y-10">
             <div class="flex justify-center">
-                <img src="./images/logo.svg" class="w-40 sm:pl-80" alt="">
+                <img src="./images/logo.svg" class="w-40 " alt="">
             </div>         
-            <h1 class="font-sans font-normal text-5xl text-gray-700 tracking-wider text-center">
+            <h1 class="font-sans font-normal text-5xl text-gray-700 tracking-wider text-center mobil:hidden">
                 A history of everything you copy
             </h1>
-            <p class="text-gray-400 font-normal xl:w-full xl:text-xl xl:text-center md:text-3xl md:w-4/4 md:text-center sm:text-center">
-                Clipboard allows you to track and organize everything you 
-                copy. Instantly <br> access your clipboard on all your devices.
-            </p>
+            <div class="max-sm:text-center md:text-center">
+                <p class="text-gray-400 font-normal max-sm:w-5/5 max-sm:text-xl md:text-3xl md:w-4/4  xl:w-full xl:text-xl xl:text-center">
+                    Clipboard allows you to track and organize everything you 
+                    copy. Instantly <br> access your clipboard on all your devices.
+                </p>
+            </div>
             <div class="flex flex-row justify-center align-center space-x-10 pt-10 flex-wrap">
-                <button class="lg:flex lg:items-center bg-teal-500 text-white rounded-full xl:w-60 xl:h-10 xl:text-lg xl:px-10 md:p-6 md:w-60 md:text-2xl">Download for iOS</button>
-                <button class="lg:flex lg:items-center bg-indigo-500 text-white rounded-full xl:w-60 xl:h-10 xl:text-lg xl:px-10 md:p-6 md:w-60 md:text-2xl">Download for Mac</button>
+                <button class="lg:flex lg:items-center hover:shadow-xl hover:bg-red-200 bg-teal-500 text-white rounded-full max-sm:h-14 max-sm:w-40 md:p-6 md:w-60 md:text-2xl xl:w-60 xl:h-10 xl:text-lg xl:px-10">Download for iOS</button>
+                <button class="lg:flex lg:items-center bg-indigo-500 hover:shadow-xl hover:bg-red-200 text-white rounded-full max-sm:h-14 max-sm:w-40 md:p-6 md:w-60 md:text-2xl xl:w-60 xl:h-10 xl:text-lg xl:px-10">Download for Mac</button>
             </div>
         </div>
     </div>
     <div class="flex flex-col justify-center space-y-10 mt-40">
-        <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
+        <h1 class="font-sans font-normaltext-gray-700 tracking-wider text-center max-sm:text-4xl md:text-5xl xl:text-4xl">
             Keep track of your snippets
         </h1>
-        <p class="text-gray-400 font-normal xl:text-lg text-center md:text-2xl">
+        <p class="text-gray-400 font-normal text-center max-sm:text-xl md:text-2xl xl:text-lg">
             Clipboard instantly stores any item you copy in the cloud, 
             meaning you can access <br> your snippets immediately on all your 
             devices. Our Mac and iOS apps will help you <br> organize everything.
         </p>
     </div>
     <div class="flex justify-between mt-20 flex-wrap">
-        <div class="xl:ml-0  md:m-auto">
+        <div class="md:m-auto xl:ml-0">
             <img src="./images/image-computer.png" alt="">
         </div>
-        <div class="flex flex-col xl:pt-20 md:m-auto md:space-y-20 md:pt-40  xl:space-y-6 xl:pr-40">
-            <h3 class="font-serif font-light xl:text-left xl:text-2xl text-gray-700 tracking-wider md:text-center md:text-4xl">
+        <div class="flex flex-col max-sm:m-auto max-sm:pt-40 max-sm:space-y-10 md:m-auto md:space-y-20 md:pt-40 xl:space-y-6 xl:pr-40 xl:pt-20">
+            <h3 class="font-serif font-light text-gray-700 tracking-wider max-sm:text-center max-sm:text-3xl md:text-center md:text-4xl xl:text-left xl:text-2xl">
                 Quick Search
             </h3>
-            <p class="text-gray-400 font-light xl:text-left xl:text-lg pb-10 md:text-center md:text-3xl">
+            <p class="text-gray-400 font-light pb-10 max-sm:text-center max-sm:text-2xl max-sm:pb-20 md:text-center md:text-3xl xl:text-left xl:text-lg">
                 Easily search your snippets by content, <br> category, web address, application, and more.
             </p>
-            <h3 class="font-serif font-light xl:text-left xl:text-2xl text-gray-700 tracking-wider md:text-center md:text-4xl">
+            <h3 class="font-serif font-light text-gray-700 tracking-wider max-sm:text-center max-sm:text-3xl md:text-center md:text-4xl xl:text-left xl:text-2xl">
                 iCloud Sync
             </h3>
-            <p class="text-gray-400 font-light xl:text-left xl:text-lg pb-10 md:text-center md:text-3xl">
-                Instantly saves and syncs snippets across all <br> your devices.
+            <p class="text-gray-400 font-light pb-10 max-sm:text-center max-sm:text-2xl max-sm:pb-20 md:text-center md:text-3xl xl:text-left xl:text-lg">
+                Instantly saves and syncs <br class="md-hidden xl-hidden"> snippets across all <br class="max-sm:hidden"> your devices.
             </p>
-            <h3 class="font-serif font-light xl:text-left xl:text-2xl text-gray-700 tracking-wider md:text-center md:text-4xl">
+            <h3 class="font-serif font-light text-gray-700 tracking-wider max-sm:text-center max-sm:text-3xl md:text-center md:text-4xl xl:text-left xl:text-2xl">
                 Complete History
             </h3>
-            <p class="text-gray-400 font-light xl:text-left xl:text-lg md:text-center md:text-3xl">
-                Retrieve any snippets from the first moment <br> you started using the app.
+            <p class="text-gray-400 font-light max-sm:text-center max-sm:text-2xl md:text-center md:text-3xl xl:text-left xl:text-lg">
+                Retrieve any snippets from the first moment <br class="max-sm:hidden"> you started using the app.
             </p>
         </div>
     </div>
     <div class="flex flex-col justify-center space-y-10 mt-40">
-        <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
+        <h1 class="font-sans font-normal text-gray-700 tracking-wider text-center max-sm:text-4xl md:text-5xl xl:text-4xl">
             Access Clipboard anywhere
         </h1>
-        <p class="text-gray-400 font-normal xl:text-xl text-center md:text-2xl">
+        <p class="text-gray-400 font-normal text-center max-sm:text-xl md:text-2xl xl:text-xl">
             Whether you’re on the go, or at your computer, you can access all your Clipboard <br>
             snippets in a few simple clicks.
         </p>
@@ -82,34 +86,34 @@
         <img src="./images/image-devices.png" class="pt-20"  alt="">
     </div>
     <div class="flex flex-col justify-center space-y-10 mt-20">
-        <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
+        <h1 class="font-sans font-normal text-gray-700 tracking-wider text-center max-sm:text-4xl md:text-5xl xl:text-4xl">
             Supercharge your workflow
         </h1>
-        <p class="text-gray-400 font-normal xl:text-xl text-center md:text-3xl">
+        <p class="text-gray-400 font-normal text-center max-sm:text-2xl max-sm:pt-4 md:text-3xl xl:text-xl">
             We’ve got the tools to boost your productivity.
         </p>
     </div>
-    <div class="xl:flex xl:justify-around flex-wrap xl:mt-20 pb-20  md:mt-40">
-       <div class="xl:flex xl:items-center xl:space-y-20 md:space-y-40">
-            <div class="flex flex-col xl:pr-20 xl:pt-14 space-y-10">
+    <div class="max-sm:mt-40 md:mt-40 xl:flex xl:justify-around xl:mt-20 flex-wrap pb-20">
+       <div class="max-sm:space-y-40 md:space-y-40 xl:flex xl:items-center xl:space-y-20">
+            <div class="flex flex-col space-y-10 xl:pr-20 xl:pt-14">
                 <div class="flex justify-center">
                     <img src="./images/icon-blacklist.svg" class="w-20" alt="">
                 </div>
-                <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
+                <h1 class="font-sans font-normal text-gray-700 tracking-wider text-center max-sm:text-4xl md:text-5xl xl:text-4xl">
                     Create blacklists
                 </h1>
-                <p class="text-gray-400 font-normal xl:text-xl leading-10 text-center md:text-3xl">
-                    Ensure sensitive information never makes its <br> way to your clipboard by excluding certain.
+                <p class="text-gray-400 font-normal leading-10 text-center max-sm:text-2xl md:text-3xl xl:text-xl">
+                    Ensure sensitive information never <br class="xl:hidden md:hidden"> makes its <br class="max-sm:hidden"> way to your clipboard by excluding certain.
                 </p>
             </div>
             <div class="flex flex-col space-y-10 xl:pr-20 xl:pb-3">
                 <div class="flex justify-center">
                     <img src="./images/icon-text.svg" class="w-20" alt="">
                 </div>
-                <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
+                <h1 class="font-sans font-normal text-gray-700 tracking-wider text-center max-sm:text-4xl md:text-5xl xl:text-4xl">
                     Plain text snippets
                 </h1>
-                <p class="text-gray-400 font-normal xl:text-xl leading-10 text-center md:text-3xl">
+                <p class="text-gray-400 font-normal leading-10 text-center max-sm:text-2xl md:text-3xl xl:text-xl">
                     Remove unwanted formatting from copied text <br> for a consistent look.
                 </p>
             </div>
@@ -117,55 +121,57 @@
                 <div class="flex justify-center">
                     <img src="./images/icon-preview.svg" class="w-20" alt="">
                 </div>
-                <h1 class="font-sans font-normal xl:text-4xl text-gray-700 tracking-wider text-center md:text-5xl">
+                <h1 class="font-sans font-normal text-gray-700 tracking-wider text-center max-sm:text-4xl md:text-5xl xl:text-4xl">
                     Sneak preview
                 </h1>
-                <p class="text-gray-400 font-normal xl:text-xl leading-10 text-center md:text-3xl">
+                <p class="text-gray-400 font-normal leading-10 text-center max-sm:text-2xl md:text-3xl xl:text-xl">
                     Quick preview of all snippets on your Clipboard <br> for easy access.
                 </p>
             </div>
        </div>
     </div>
-    <div class="flex flex-wrap justify-center xl:m-auto xl:mt-40 md:space-y-10 md:ml-20">
-        <img src="./images/logo-google.png" class="w-40 mr-28" alt="">
-        <img src="./images/logo-ibm.png" class="w-40 mr-28" alt="">
-        <img src="./images/logo-microsoft.png" class="w-40 mr-28" alt="">
-        <img src="./images/logo-hp.png" class="w-40 mr-28" alt="">
-        <img src="./images/logo-vector-graphics.png" class="w-40" alt="">
+    <div class="">
+        <div class="flex flex-wrap justify-center max-sm:items-center max-sm:space-y-20  md:space-y-10 md:ml-20 xl:m-auto xl:mt-40">
+            <img src="./images/logo-google.png" class="w-40 mr-28 xl:mt-10 max-sm:ml-24" alt="">
+            <img src="./images/logo-ibm.png" class="w-40 mr-28 max-sm:ml-24" alt="">
+            <img src="./images/logo-microsoft.png" class="w-40 mr-28 max-sm:ml-24" alt="">
+            <img src="./images/logo-hp.png" class="w-40 mr-28 max-sm:ml-24" alt="">
+            <img src="./images/logo-vector-graphics.png" class="w-40 md:w-64 md:pr-24 max-sm:mr-4" alt="">
+        </div>
     </div>
     <div class="flex justify-center mt-20">
         <div class="flex flex-col mt-40 space-y-10">       
-            <h1 class="font-sans font-normal xl:text-4xl md:text-5xl text-gray-700 tracking-wider text-center">
+            <h1 class="font-sans font-normal text-gray-700 tracking-wider text-center max-sm:text-4xl  md:text-5xl xl:text-4xl">
                 Clipboard for iOS and Mac Os            
             </h1>
-            <p class="text-gray-400 font-normal xl:text-xl text-center md:text-3xl">
-                Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-                and <br> you’re ready to start adding to your clipboard.              
+            <p class="text-gray-400 font-normal text-center max-sm:text-2xl md:text-3xl xl:text-xl">
+                Available for free on the App Store. <br class="xl:hidden md:hidden"> Download for  Mac or iOS, sync with iCloud 
+                and <br class="max-sm:hidden"> you’re ready <br class="xl:hidden md:hidden"> to start adding to your clipboard.              
             </p>
             <div class="flex flex-row justify-center align-center space-x-10 pt-10 flex-wrap">
-                <button class="lg:flex lg:items-center bg-teal-500 text-white rounded-full xl:w-60 xl:h-10 xl:text-lg xl:px-10 md:p-6 md:w-60 md:text-2xl">Download for iOS</button>
-                <button class="lg:flex lg:items-center bg-indigo-500 text-white rounded-full  xl:w-60 xl:h-10 xl:text-lg xl:px-10 md:p-6 md:w-60 md:text-2xl">Download for Mac</button>
+                <button class="lg:flex lg:items-center hover:shadow-xl hover:bg-red-200 bg-teal-500 text-white rounded-full max-sm:h-14 max-sm:w-40 md:p-6 md:w-60 md:text-2xl xl:w-60 xl:h-10 xl:text-lg xl:px-10">Download for iOS</button>
+                <button class="lg:flex lg:items-center hover:shadow-xl hover:bg-red-200 bg-indigo-500 text-white rounded-full max-sm:h-14 max-sm:w-40 md:p-6 md:w-60 md:text-2xl xl:w-60 xl:h-10 xl:text-lg xl:px-10">Download for Mac</button>
             </div>
         </div>
     </div>
-    <footer class="flex flex-wrap items-center bg-gray-200 h-40 mt-40">
-       <div class="flex justify-around">
-            <div class="flex items-start pl-10 xl:pr-40 md:pr-10">
+    <footer class="flex flex-wrap items-center bg-gray-200 h-40 mt-40 max-sm:h-5/6">
+       <div class="flex justify-around max-sm:flex-col max-sm:text-center max-sm:space-y-4">
+            <div class="flex items-start pl-10 max-sm:pl-44 md:pr-10 xl:pr-40">
                 <img src="./images/logo.svg" class="w-20" alt="">
             </div>  
-            <div class="flex flex-col space-y-6 text-gray-600 xl:pr-60 md:pr-20">
-                <a href="">FAQs</a>
-                <a href="">Contact Us</a>
+            <div class="flex flex-col space-y-6 text-gray-600 max-sm:pl-40 max-sm:pt-4 md:pr-20 xl:pr-60">
+                <a class="hover:text-teal-500" href="">FAQs</a>
+                <a class="hover:text-teal-500" href="">Contact Us</a>
             </div>
-            <div class="flex flex-col space-y-6 text-gray-600 xl:pr-60 md:pr-20">
-                <a href="">Privacy Policy</a>
-                <a href=""> Press Kit</a>
+            <div class="flex flex-col space-y-6 text-gray-600 max-sm:pl-40 md:pr-20 xl:pr-60">
+                <a class="hover:text-teal-500" href="">Privacy Policy</a>
+                <a class="hover:text-teal-500" href=""> Press Kit</a>
             </div>
-            <div class="flex flex-col space-y-6 text-gray-600">
-                <a href="">Install Guide</a>
+            <div class="flex flex-col space-y-6 text-gray-600 max-sm:pl-40">
+                <a class="hover:text-teal-500" href="">Install Guide</a>
             </div>
        </div>
-       <div class="flex space-x-6 xl:pl-80 md:pl-0 md:pt-20">
+       <div class="flex space-x-6 max-sm:pl-36 md:pl-0 md:pt-20 xl:pl-80">
             <img src="./images/icon-facebook.svg" alt="">
             <img src="./images/icon-twitter.svg" alt="">
             <img src="./images/icon-instagram.svg" alt="">
